Transitioning to charactercontroller

--- a/.gitignore
+++ b/.gitignore
@@ -24,5 +24,7 @@ ExportedObj/
 # Unity3D generated meta files
 *.pidb.meta
 
+/Temp/UnityLockFile
+
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
